# ShadowForensic

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/shadowforensic/cli/: main.py
src/shadowforensic/core/: mounter.py  scanner.py
src/shadowforensic/utils/: exceptions.py
src/shadowforensic/vss/: wrapper.py
tests/: test_cli.py
