[project]
name = "shadowforensic"
version = "0.1.0"
description = "A professional forensic tool for Windows Volume Shadow Copy Service (VSS)."
authors = [
    { name = "Ismail Tasdelen", email = "ismailtasdelen@protonmail.com" }
]
dependencies = [
    "typer[all]>=0.9.0",
    "pypiwin32>=223",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
shadowforensic = "shadowforensic.cli.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
